# UCC

2do/: CMakeLists.txt  prueba.js
2do/Analisis Numerico/3 - Regresion Lineal/: Ejercicio 1.xlsx  Ejercicio 2(Mejor para parcial).xlsx  Ejercicio 3.xlsx  Ejercicio 4.xlsx  Ejercicio 5.xlsx
2do/Analisis Numerico/Metodo Biseccion/: Ejercicio 1.xlsx  Ejercicio 3.xlsx  Ejercicio 4.xlsx  Ejercicio 5.xlsx
2do/Fisica II/Primer Parcial/: clase teórica Cap 23_16cff4c3cf5ae538d7dae7d8b701efa4.pptx
2do/Fisica III/Unidad 1/: GUÍA DE PROBLEMAS PRÁCTICO Nº 1 ONDAS SOBRE CUERDAS.docx
2do/Fisica III/Unidad 2/: GUÍA DE PROBLEMAS PRÁCTICO Nº 2 ONDAS ACÚSTICAS.docx
2do/Fisica III/Unidad 3/: GUÍA DE PROBLEMAS PRÁCTICO Nº 3.doc
2do/Fisica III/Unidad 4/: GUÍA DE PROBLEMAS PRÁCTICO Nº 4 ONDAS ELECTROMAGNÉTICAS.doc
2do/Prob y Estad/: Ejercicio 3.docx  Graficos ejercicio 2.docx  ~$ercicio 1.docx
2do/Prob y Estad/Parcial 1/: Parcial2504.docx
2do/Prob y Estad/Parcial 2/: Modelos de Probabilidad.rar
2do/Prob y Estad/Unidad 1/: 2Parcial2504.docx  Clases.pptx  Modelo Parcial 1.docx
2do/Programacion II/: CMakeLists.txt  Preguntero Prog 2.docx  main.cpp  prueba.cpp  puntero-prueba.cpp
2do/Programacion II/EjemploPOO/: main.cpp
2do/Programacion II/Guia 1/: 1-polinomio.cpp  2-factorial.cpp  3-vector.cpp  4-matriz.cpp  Asistencia-18-03.cpp  CMakeLists.txt  burbujaMejorada.cpp
2do/Programacion II/Punteros/: 1-punteros.cpp  2-impar.cpp  3-primos.cpp  4-vector.cpp  5-menor.cpp  6-Schiavoni Santino Asistencia.cpp
2do/Programacion II/poo/: 1-rectangulo.cpp  2-fecha.cpp  poo-1.cpp  (+2 more)
(+367 files in other folders)
