cmake_minimum_required(VERSION 3.27)
project(2do)

set(CMAKE_CXX_STANDARD 14)

add_executable(2do
        "Programacion II/Guia 1/2-factorial.cpp"
        "Programacion II/Teorico/poo.cpp"
        "Programacion II/Guia 1/1-polinomio.cpp"
        "Programacion III/u1-recursividad-santinoschiavoni_2319332/Ej4.cpp"
        "Programacion III/unidad02-listas-SantinoSchiavoni/Ej-01/main.cpp"
)
